fix tooltip on mobile. check with wp 6.0

--- a/resources/css/wp_deckbox_mtg.css
+++ b/resources/css/wp_deckbox_mtg.css
@@ -14,7 +14,8 @@ table.mtg_deck td {
   vertical-align: top;
 }
 
-table.mtg_deck td.card_box {
-  width: 223px;
-  height: 310px;
+table.mtg_deck td.card_box img {
+  max-height: 310px !important;
+  max-width: 310px !important;
 }
+
